Works with JDK 12